Fixes header font size  on mobile devices

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -252,6 +252,9 @@ p {
 
 .service.medium, .service.small {
   padding: 10px;
+  h4 {
+    font-size: 1.1em;
+  }
   .artwork {
     margin: 0;
     height: 400px;
